--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>To test our extension click on the folliwing link :</h1>
-				<p><em>lib_global.js =</em> <a href="http://scratchx.org/?url=https://VannesteFelix.github.io/extensions/lib_global.js"></a></p>
+				<p><em>lib_global.js =</em> <a href="http://scratchx.org/?url=https://VannesteFelix.github.io/extensions/lib_global.js">http://scratchx.org/?url=https://VannesteFelix.github.io/extensions/lib_global.js</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
