--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </section>     
             <center>
             <section class="galleri">
-                <ul>   
-                        <a href="?url=http://localhost:8001/scratch_extensions/lib_global.js" data-action="load-url">
+                <ul>  
+                        <a href="?url=http://VannesteFelix.github.io//scratch_extensions/lib_global.js" data-action="load-url">
                             <header>
                                 <h2>Tobby The Robot</h2>
                                 <p class="author">Développé par des étudiants Isen pour TXRobotic</p>
