--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <h1>Equipement nécessaire:</h1>
   <dl>
   <dt>USB Cable</dt>
-  <dd> <img width="100" height="100" src="images/cable_arduino.jpg" /><br /></dd>
+  <dd> <img width="100" height="100" src="images/cable_arduino.png" /><br /></dd>
 
   <dt>Tobby the Robot</dt>
 
