add blocks explanation

--- a/blocks.html
+++ b/blocks.html
@@ -21,26 +21,56 @@
 <div id="content-container">
 
   <a name="Blocks Description" />
-  <h1>Blocks Description</h1>
-  <p>Ceci est une bref description de chaque blocks Scratch inclus avec l'extension scratch Tobby.</p>
-  <br />
+    <h1>Blocks Description</h1>
+    <p>Ceci est une bref description de chaque blocks Scratch inclus avec l'extension scratch Tobby.</p>
+    <br />
+    <h2>LED</h2>
+      <div class="block">
+      <img height="52" src="images/blocks/led_OnOff.png" />
+      <p>Allume (On) ou étteint (Off) toutes les leds</p>
+      </div>
 
-  <div class="block">
-  <img height="52" src="images/blocks/block_button_buttonPressed.png" />
-  <p>Runs when the device is connected</p>
-  </div>
+      <hr />
 
-  <hr />
-<!--
-  <div class="block">
-  <img height="39" src="images/blocks/led-connect.png" />
-  <p>Connects an LED, button, or servo to a digital connection.</p>
-  <p>See the <a href="hardware.html">Hardware</a> page for an explaination of digital vs. analog connections</p>
-  </div>
+      <div class="block">
+      <img height="52" src="images/blocks/led_setColor.png" />
+      <p>Permet de définir une couleur pour les leds (ex: blanc,rouge...)</p>
+      </div>
 
-  <hr />
+      <hr />
 
--->
+      <div class="block">
+      <img height="52" src="images/blocks/led_setColorAll.png" />
+      <p>Allume toutes les leds avec une couleur précise (ex: blanc= R:255 G:255 B:255)</p>
+      </div>
+
+      <hr />
+
+      <div class="block">
+      <img height="52" src="images/blocks/led_setColorUnit.png" />
+      <p>Allume une led avec une couleur précise </p>
+      </div>
+
+      <hr />
+
+    <h2>BUZZER</h2>
+
+      <div class="block">
+      <img height="52" src="images/blocks/buzzer_OnOff.png" />
+      <p>Allume (On) ou étteint (Off) le buzzer</p>
+      </div>
+
+      <hr />
+    <!--
+      <div class="block">
+      <img height="39" src="images/blocks/led-connect.png" />
+      <p>Connects an LED, button, or servo to a digital connection.</p>
+      <p>See the <a href="hardware.html">Hardware</a> page for an explaination of digital vs. analog connections</p>
+      </div>
+
+      <hr />
+
+    -->
 
   </div>
 
