add blocks explanation

--- a/blocks.html
+++ b/blocks.html
@@ -24,53 +24,134 @@
     <h1>Blocks Description</h1>
     <p>Ceci est une bref description de chaque blocks Scratch inclus avec l'extension scratch Tobby.</p>
     <br />
+
     <h2>LED</h2>
+      <br/> 
+      
       <div class="block">
-      <img height="52" src="images/blocks/led_OnOff.png" />
+      <img height="42" src="images/blocks/led_ledOnOff.png" />
       <p>Allume (On) ou étteint (Off) toutes les leds</p>
       </div>
 
       <hr />
 
       <div class="block">
-      <img height="52" src="images/blocks/led_setColor.png" />
+      <img height="42" src="images/blocks/led_setColor.png" />
       <p>Permet de définir une couleur pour les leds (ex: blanc,rouge...)</p>
       </div>
 
       <hr />
 
       <div class="block">
-      <img height="52" src="images/blocks/led_setColorAll.png" />
+      <img height="42" src="images/blocks/led_setColorAll.png" />
       <p>Allume toutes les leds avec une couleur précise (ex: blanc= R:255 G:255 B:255)</p>
       </div>
 
       <hr />
 
       <div class="block">
-      <img height="52" src="images/blocks/led_setColorUnit.png" />
+      <img height="42" src="images/blocks/led_setColorUnit.png" />
       <p>Allume une led avec une couleur précise </p>
       </div>
 
       <hr />
 
+      <div class="block">
+      <img height="42" src="images/blocks/emotion_expression.png" />
+      <p>Affiche l'émotion choisi sur la ou les matrices à led</p>
+      </div>
+      <br/> 
+
     <h2>BUZZER</h2>
+      <br/> 
 
       <div class="block">
-      <img height="52" src="images/blocks/buzzer_OnOff.png" />
+      <img height="42" src="images/blocks/buzzer_buzzerOnOff.png" />
       <p>Allume (On) ou étteint (Off) le buzzer</p>
       </div>
 
       <hr />
-    <!--
+
       <div class="block">
-      <img height="39" src="images/blocks/led-connect.png" />
-      <p>Connects an LED, button, or servo to a digital connection.</p>
-      <p>See the <a href="hardware.html">Hardware</a> page for an explaination of digital vs. analog connections</p>
+      <img height="42" src="images/blocks/buzzer_playMelody.png" />
+      <p>Joue une des mélodie prêt enregistré</p>
       </div>
 
       <hr />
 
-    -->
+      <div class="block">
+      <img height="42" src="images/blocks/buzzer_playNote.png" />
+      <p>Joue la note choisi (do,do#,re,re#,mi,fa,fa#,sol,sol#,la,la#,si)</p>
+      </div>
+
+      <hr />
+
+      <div class="block">
+      <img height="42" src="images/blocks/buzzer_playSonDelay.png" />
+      <p>Joue la note choisi pendant la durée choisi</p>
+      </div>
+
+      <hr />
+
+      <div class="block">
+      <img height="42" src="images/blocks/buzzer_setDelayAttente.png" />
+      <p>Configure l'attente du buzzer</p>
+      </div>
+
+      <hr />
+
+      <div class="block">
+      <img height="42" src="images/blocks/buzzer_setDelayRythme.png" />
+      <p>Configure le tempo du buzzer</p>
+      </div>
+
+      <hr />
+
+      <div class="block">
+      <img height="42" src="images/blocks/buzzer_setDelayRythme.png" />
+      <p>Configure le tempo du buzzer</p>
+      </div>
+      <br/> 
+
+    <h2>BOUTON</h2>
+      <br/> 
+
+      <div class="block">
+      <img height="42" src="images/blocks/button_buttonPressed.png" />
+      <p>Lis l'état du bouton selectionné (pressé, relaché)</p>
+      </div>
+
+      <hr />
+
+      <div class="block">
+      <img height="42" src="images/blocks/button_whenButton.png" />
+      <p>Passe à l'action suiante quand l'état du bouton selectionné change</p>
+      </div>
+      <br/> 
+
+    <h2>MOTEUR</h2>
+      <br/> 
+
+      <div class="block">
+      <img height="42" src="images/blocks/moteur_1.png" />
+      <p>Choisi un moteur (celui de gauche ou de droite ou même les deux), son sens (avant/arrière) et lui associe une vitesse</p>
+      </div>
+
+      <hr />
+
+      <div class="block">
+      <img height="42" src="images/blocks/moteur_2.png" />
+      <p>Arrête un des deux moteurs ou les deux</p>
+      </div>
+      <br/> 
+
+    <h2>AUTRE</h2> 
+      <br/> 
+
+      <div class="block">
+      <img height="42" src="images/blocks/connection.png" />
+      <p>Attent la connection du robot avant d'éffectuer l'action suivante</p>
+      </div>
 
   </div>
 
