--- a/blocks.html
+++ b/blocks.html
@@ -1,28 +1,30 @@
 <html>
 <head>
-<title>Tobby The Robot - Scratch Extension</title>
+<title>Tobby the Robot - Scratch Extension</title>
 <link rel="stylesheet" type="text/css" href="style.css"></link>
 <meta charset="utf-8" />
 </head>
 <body>
 
 <div id="header-container">
+<center>
   <header>
-    <h1>Tobby The Robot - Scratch Extension</h1>
-    <ul>
-      <li><a class="selected" href="index.html">A propos</a></li>
+    <h1>Tobby the Robot - Extension ScratchX</h1>
+    <ul id="summary">
+      <li><a class="selected" href="index.html">À propos</a></li>
       <li><a href="gettingstarted.html">Manuel d'utilisation</a></li>
       <li><a href="blocks.html">Blocks Description</a></li>
       <li><a href="examples.html">Example de Projets</a></li>
     </ul>
   </header>
+</center>
 </div>
 
 <div id="content-container">
 
-  <a name="Blocks Description" />
-    <h1>Blocks Description</h1>
-    <p>Ceci est une bref description de chaque blocks Scratch inclus avec l'extension scratch Tobby.</p>
+  <a name="Description des blocs" />
+    <h1>Description des blocs</h1>
+    <p>Ceci est une brève description de chaque bloc Scratch présent dans l'extension Scratch Tobby.</p>
     <br />
 
     <h2>LED</h2>
@@ -30,35 +32,35 @@
       
       <div class="block">
       <img height="42" src="images/blocks/led_ledOnOff.png" />
-      <p>Allume (On) ou étteint (Off) toutes les leds</p>
+      <p>Allume (On) ou éteint (Off) toutes les LED</p>
       </div>
 
       <hr />
 
       <div class="block">
       <img height="42" src="images/blocks/led_setColor.png" />
-      <p>Permet de définir une couleur pour les leds (ex: blanc,rouge...)</p>
+      <p>Permet de définir une couleur pour les LED (ex: blanc, rouge...)</p>
       </div>
 
       <hr />
 
       <div class="block">
       <img height="42" src="images/blocks/led_setColorAll.png" />
-      <p>Allume toutes les leds avec une couleur précise (ex: blanc= R:255 G:255 B:255)</p>
+      <p>Allume toutes les LED avec une couleur précise (ex: blanc = R:255 G:255 B:255)</p>
       </div>
 
       <hr />
 
       <div class="block">
       <img height="42" src="images/blocks/led_setColorUnit.png" />
-      <p>Allume une led avec une couleur précise </p>
+      <p>Allume une LED avec une couleur précise </p>
       </div>
 
       <hr />
 
       <div class="block">
       <img height="42" src="images/blocks/emotion_expression.png" />
-      <p>Affiche l'émotion choisi sur la ou les matrices à led</p>
+      <p>Affiche l'émotion choisie sur la ou les matrices à LED</p>
       </div>
       <br/> 
 
@@ -67,28 +69,28 @@
 
       <div class="block">
       <img height="42" src="images/blocks/buzzer_buzzerOnOff.png" />
-      <p>Allume (On) ou étteint (Off) le buzzer</p>
+      <p>Allume (On) ou éteint (Off) le buzzer</p>
       </div>
 
       <hr />
 
       <div class="block">
       <img height="42" src="images/blocks/buzzer_playMelody.png" />
-      <p>Joue une des mélodie prêt enregistré</p>
+      <p>Joue une des mélodies pré-enregistrée</p>
       </div>
 
       <hr />
 
       <div class="block">
       <img height="42" src="images/blocks/buzzer_playNote.png" />
-      <p>Joue la note choisi (do,do#,re,re#,mi,fa,fa#,sol,sol#,la,la#,si)</p>
+      <p>Joue la note choisie (do, do#, re, re#, mi, fa, fa#, sol, sol#, la, la#, si)</p>
       </div>
 
       <hr />
 
       <div class="block">
       <img height="42" src="images/blocks/buzzer_playSonDelay.png" />
-      <p>Joue la note choisi pendant la durée choisi</p>
+      <p>Joue la note choisie pendant la durée choisie</p>
       </div>
 
       <hr />
@@ -107,25 +109,21 @@
 
       <hr />
 
-      <div class="block">
-      <img height="42" src="images/blocks/buzzer_setDelayRythme.png" />
-      <p>Configure le tempo du buzzer</p>
-      </div>
-      <br/> 
+
 
     <h2>BOUTON</h2>
       <br/> 
 
       <div class="block">
       <img height="42" src="images/blocks/button_buttonPressed.png" />
-      <p>Lis l'état du bouton selectionné (pressé, relaché)</p>
+      <p>Lit l'état du bouton selectionné (pressé ou relaché)</p>
       </div>
 
       <hr />
 
       <div class="block">
       <img height="42" src="images/blocks/button_whenButton.png" />
-      <p>Passe à l'action suiante quand l'état du bouton selectionné change</p>
+      <p>Passe à l'action suivante quand le bouton est dans l'état sélectionné</p>
       </div>
       <br/> 
 
@@ -134,14 +132,14 @@
 
       <div class="block">
       <img height="42" src="images/blocks/moteur_1.png" />
-      <p>Choisi un moteur (celui de gauche ou de droite ou même les deux), son sens (avant/arrière) et lui associe une vitesse</p>
+      <p>Choisit un moteur (celui de gauche, de droite ou les deux), son sens (avancer ou reculer) et lui associe une vitesse par rapport à la vitesse maximale possible</p>
       </div>
 
       <hr />
 
       <div class="block">
       <img height="42" src="images/blocks/moteur_2.png" />
-      <p>Arrête un des deux moteurs ou les deux</p>
+      <p>Arrête l'un des deux moteurs ou les deux</p>
       </div>
       <br/> 
 
@@ -150,7 +148,7 @@
 
       <div class="block">
       <img height="42" src="images/blocks/connection.png" />
-      <p>Attent la connection du robot avant d'éffectuer l'action suivante</p>
+      <p>Attend la connexion du robot avant d'effectuer la ou les actions suivantes</p>
       </div>
 
   </div>
