--- a/examples.html
+++ b/examples.html
@@ -1,36 +1,48 @@
 <html>
 <head>
-<title>Tobby The Robot - Scratch Extension</title>
+<title>Tobby the Robot - Scratch Extension</title>
 <link rel="stylesheet" type="text/css" href="style.css"></link>
 <meta charset="utf-8" />
 </head>
 <body>
 
 <div id="header-container">
+<center>
   <header>
-    <h1>Tobby The Robot - Scratch Extension</h1>
-    <ul>
-      <li><a class="selected" href="index.html">A propos</a></li>
+    <h1>Tobby the Robot - Extension ScratchX</h1>
+    <ul id="summary">
+      <li><a class="selected" href="index.html">À propos</a></li>
       <li><a href="gettingstarted.html">Manuel d'utilisation</a></li>
       <li><a href="blocks.html">Blocks Description</a></li>
       <li><a href="examples.html">Example de Projets</a></li>
     </ul>
   </header>
+</center>
 </div>
 
 <div id="content-container">
 
   <a name="examples" />
-  <h1>Example de Projets</h1>
+  <h1>Exemple de projets</h1>
 
   <dl>
-  <!-- 
-    <dt><a target="_new" href="http://scratchx.org/?url=http://khanning.github.io/scratch-arduino-extension/examples/Arduino%20Example%20-%20Blink%20an%20LED.sbx">Blink an LED</a></dt>
-    <dd>Make an LED blink on and off</dd>
+
+    <dt><a target="_new" href="http://scratchx.org/?url=http://vannestefelix.github.io/examples/Exemple_led.sbx">LED</a></dt>
+    <br/> 
+    <dd>Allume successivement les led pour donner un effet de chargement</dd>
     <br />
-   -->
+
   </dl>
   
+  <dl>
+
+    <dt><a target="_new" href="http://scratchx.org/?url=http://vannestefelix.github.io/examples/joy_stick.sbx">MOTEUR</a></dt>
+    <br/> 
+    <dd>Controler Tobby grâce à son joystick</dd>
+    <br />
+
+  </dl>
+
 </div>
 
 <br />
