--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -7,15 +7,17 @@
 <body>
 
 <div id="header-container">
+<center>
   <header>
-    <h1>Tobby The Robot - Scratch Extension</h1>
-    <ul>
-      <li><a class="selected" href="index.html">A propos</a></li>
+    <h1>Tobby the Robot - Extension ScratchX</h1>
+    <ul id="summary">
+      <li><a class="selected" href="index.html">À propos</a></li>
       <li><a href="gettingstarted.html">Manuel d'utilisation</a></li>
       <li><a href="blocks.html">Blocks Description</a></li>
       <li><a href="examples.html">Example de Projets</a></li>
     </ul>
   </header>
+</center>
 </div>
 
 <div id="content-container">
@@ -43,7 +45,7 @@
   <h3>3. Charger l'extension de Tobby sur ScratchX</h3>
 
   <p>Lancer l'extension en suivant le lien suivant:</p>
-  <a target="_new" href="http://scratchx.org/?url=http://vannestefelix.github.io/scratch_extensions/lib_global.js ">http://scratchx.org/?url=http://vannestefelix.github.io/scratch_extensions/lib_global.js</a>
+  <a target="_new" href="http://scratchx.org/?url=http://vannestefelix.github.io/scratch_extensions/lib_global.js">http://scratchx.org/?url=http://vannestefelix.github.io/scratch_extensions/lib_global.js</a>
 
   <p><b>NOTE:</b> Sur Firefox, une fenêtre d'autorisation apparaîtra surement: "Allow scratchx.org to run "Scratch Device?". Click "Allow...".</p>
   <p><img src="images/firefox-plugin.png" width=600 /></p>
