--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <html>
 <head>
-<title>Tobby The Robot - Scratch Extension</title>
+<title>Tobby the Robot - Extension Scratch</title>
 <link rel="stylesheet" type="text/css" href="style.css"></link>
 <meta charset="utf-8" />
 </head>
 <body>
 
 <div id="header-container">
+<center>
   <header>
-    <h1>Tobby The Robot - Scratch Extension</h1>
-    <ul>
-      <li><a class="selected" href="index.html">A propos</a></li>
+    <h1>Tobby the Robot - Extension ScratchX</h1>
+    <ul id="summary">
+      <li><a class="selected" href="index.html">À propos</a></li>
       <li><a href="gettingstarted.html">Manuel d'utilisation</a></li>
       <li><a href="blocks.html">Blocks Description</a></li>
       <li><a href="examples.html">Example de Projets</a></li>
     </ul>
   </header>
+</center>
 </div>
 
 <div id="content-container">
@@ -23,28 +25,28 @@
   <a name="intro" />
   <h1>Introduction</h1>
 
-  <p>Cette <a href="https://scratch.mit.edu">Scratch</a> extension permet d'interargir avec le monde physique grace à notre fantastic robot: Tobby. Grâce à deux environnements Scratch différents, il permet à des élèves d'école primaire de s'initier à la programmation, et à des élèves de collège de s'améliorer. Tobby est également programmable directement en Arduino pour les plus avancés.</p>
+  <p>Cette extension <a href="https://scratch.mit.edu">Scratch</a> permet au robot Tobby d'interagir avec le monde physique. Grâce à deux environnements Scratch différents, il permet non seulement à des élèves d'école primaire de s'initier à la programmation, mais aussi à des élèves de collège de s'améliorer. Tobby est également programmable directement en Arduino pour les plus avancés.</p>
 
-  <p>Cette extension <a href="https://scratch.mit.edu">Scratch</a> et possible grace à <a href="http://scratchx.org">ScratchX</a>, qui est pour le moment une extension expérimentale pour le langage de programmation Scratch.</p>
+  <p>L'extension <a href="https://scratch.mit.edu">Scratch</a> qui permet à Tobby d'être programmable existe grâce à <a href="http://scratchx.org">ScratchX</a>, qui est pour le moment une extension expérimentale pour le langage de programmation Scratch.</p>
 
   <center>
   <img width="500" height="500" src="images/photo_robot.png" /><br /><em>Tobby the Robot</em>
   </center>
 
-  <h1>Equipement nécessaire:</h1>
+  <h1>Équipement nécessaire:</h1>
   <dl>
-  <dt>USB Cable</dt>
+  <dt> - Câble USB</dt>
   <dd> <img width="100" height="100" src="images/cable_arduino.png" /><br /></dd>
 
-  <dt>Tobby the Robot</dt>
+  <dt> - Tobby the Robot</dt>
 
   <h1>Première utilisation:</h1>
 
-  <p>Pour toute les instruction pour comment utiliser l'extension : <a href="gettingstarted.html">Manuel d'utilisation</a> page.</p>
+  <p>Pour toutes les instructions sur l'utilisation de l'extension : <a href="gettingstarted.html">Manuel d'utilisation</a>.</p>
 
-  <p>Si vous rencontrer un quelconque problème, complétez un <a target="_blank" href="https://github.com/vannestefelix/vannestefelix.github.io/issues/new">rapport d'erreur</a> sur github</p>
+  <p>Si vous rencontrez un quelconque problème, complétez un <a target="_blank" href="https://github.com/vannestefelix/vannestefelix.github.io/issues/new">rapport d'erreur</a> sur Github</p>
 
-  <p>Si vous savez déjà tous cela <a href="http://scratchx.org/?url=http://vannestefelix.github.io/scratch_extension/lib_global.js" target="_blank">lancez l'extension sur ScratchX</a></p>
+  <p>Si vous savez déjà tout cela: <a href="http://scratchx.org/?url=http://vannestefelix.github.io/scratch_extension/lib_global.js" target="_blank">lancez l'extension sur ScratchX</a></p>
 
 <br />
 
