--- a/examples.html
+++ b/examples.html
@@ -27,7 +27,7 @@
 
   <dl>
 
-    <dt><a target="_new" href="http://scratchx.org/?url=http://vannestefelix.github.io/examples/Exemple_led.sbx">LED</a></dt>
+    <dt><a target="_new" href="http://scratchx.org/?url=https://vannestefelix.github.io/examples/Exemple_led.sbx">LED</a></dt>
     <br/> 
     <dd>Allume successivement les led pour donner un effet de chargement</dd>
     <br />
@@ -36,7 +36,7 @@
   
   <dl>
 
-    <dt><a target="_new" href="http://scratchx.org/?url=http://vannestefelix.github.io/examples/joy_stick.sbx">MOTEUR</a></dt>
+    <dt><a target="_new" href="http://scratchx.org/?url=https://vannestefelix.github.io/examples/joy_stick.sbx">MOTEUR</a></dt>
     <br/> 
     <dd>Controler Tobby grâce à son joystick</dd>
     <br />
