--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
   <p>Si vous rencontrez un quelconque problème, complétez un <a target="_blank" href="https://github.com/vannestefelix/vannestefelix.github.io/issues/new">rapport d'erreur</a> sur Github</p>
 
-  <p>Si vous savez déjà tout cela: <a href="http://scratchx.org/?url=http://vannestefelix.github.io/scratch_extension/lib_global.js" target="_blank">lancez l'extension sur ScratchX</a></p>
-
+  <p>Si vous savez déjà tout cela: <a target="_new" href="http://scratchx.org/?url=http://vannestefelix.github.io/scratch_extensions/lib_global.js">lancez l'extension sur ScratchX</a></p>
+  
 <br />
 
 </body>
