--- a/blocks.html
+++ b/blocks.html
@@ -13,8 +13,8 @@
     <ul id="summary">
       <li><a class="selected" href="index.html">À propos</a></li>
       <li><a href="gettingstarted.html">Manuel d'utilisation</a></li>
-      <li><a href="blocks.html">Blocks Description</a></li>
-      <li><a href="examples.html">Example de Projets</a></li>
+      <li><a href="blocks.html">Description des blocs</a></li>
+      <li><a href="examples.html">Exemple de Projets</a></li>
     </ul>
   </header>
 </center>
