--- a/examples.html
+++ b/examples.html
@@ -27,7 +27,7 @@
 
   <dl>
 
-    <dt><a target="_new" href="http://scratchx.org/?url=https://vannestefelix.github.io/examples/exemple_led.sbx">LED</a></dt>
+    <dt><a target="_new" href="http://scratchx.org/?url=https://vannestefelix.github.io/examples/Exemple_led.sbx">LED</a></dt>
     <br/> 
     <dd>Allume successivement les leds pour donner un effet de chargement</dd>
     <br />
@@ -53,6 +53,15 @@
   <dl>
 
     <dt><a target="_new" href="http://scratchx.org/?url=https://vannestefelix.github.io/examples/exemple_emotion.sbx">EMOTION</a></dt>
+    <br/> 
+    <dd>Afficher des emotions sur Tobby!</dd>
+    <br />
+
+  </dl>
+
+  <dl>
+
+    <dt><a target="_new" href="http://scratchx.org/?url=https://vannestefelix.github.io/examples/exemple_all.sbx">ALL</a></dt>
     <br/> 
     <dd>Afficher des emotions sur Tobby!</dd>
     <br />
