--- a/examples.html
+++ b/examples.html
@@ -63,7 +63,7 @@
 
     <dt><a target="_new" href="http://scratchx.org/?url=https://vannestefelix.github.io/examples/exemple_all.sbx">ALL</a></dt>
     <br/> 
-    <dd>Afficher des emotions sur Tobby!</dd>
+    <dd>Programme regroupant l'ensemble des fonctionnalités</dd>
     <br />
 
   </dl>
